fixing the profile menu items shift

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -18,7 +18,7 @@
     display: flex;
 }
 
-.nav li {
+.nav li.beforeAuth {
     padding: 0em 1em;
     list-style-type: none;
 }
